# api_template

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
src/app/: main.py
tests/: conftest.py  test_app.py
tests/api/: test_health.py  test_root.py
