[project]
name = "api_template"
version = "0.1.0"
description = "Minimal FastAPI + uv + Uvicorn template (src layout)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
]

[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/app"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.2",
    "httpx>=0.27",
]

